.provarCaches/00D5f000005vwGkEAI/objects/rstk__process_oplab__c.object
<CustomObject>
    <description>process_oplab__c: Used for API/CSV labor and machine bookings</description>
    <fields>
        <fullName>rstk__actlabrate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Actual Labor Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bookdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__chargehrs__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Charge Hours</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__chargetypeind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Charge Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__clockno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Clock No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__import_msg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Import Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__machno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Machine</label>
        <referenceTo>rstk__rtmach__c</referenceTo>
        <relationshipLabel>Process Labor Bookings</relationshipLabel>
        <relationshipName>Process_Labor_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__opcomments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__setrunhrsind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Setup/Run Hours Ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shift__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shift</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__txncomments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>Process Labor Bookings</relationshipLabel>
        <relationshipName>Process_Labor_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woordop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operation</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>Process Labor Bookings</relationshipLabel>
        <relationshipName>Process_Labor_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process Labor Booking</label>
    <listViews>
        <fullName>rstk__Labor_Booking</fullName>
        <columns>NAME</columns>
        <columns>rstk__woordop__c</columns>
        <columns>rstk__wctr__c</columns>
        <columns>rstk__clockno__c</columns>
        <columns>rstk__bookdate__c</columns>
        <columns>rstk__chargehrs__c</columns>
        <columns>rstk__actlabrate__c</columns>
        <columns>rstk__chargetypeind__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Labor Booking</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Labor Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>